# template-ml-registry

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.toml
notebooks/: eda.ipynb
src/package/: cli.py  config.py  grid.py  models.py  registry.py  runner.py
src/package/data/: io.py  preprocessing.py
src/package/eval/: metrics.py  plots.py
