[project]
name = "example name"
version = "0.1.0"
description = "example description"
requires-python = ">=3.12"
dependencies = [
  "polars>=1.6",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "plotly>=5.22",
  "kaleido>=0.2.1"
]

[tool.uv]
dev-dependencies = ["ruff>=0.6","basedpyright>=1.16","ipykernel>=6.29"]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B"]
lint.ignore = ["E203","E501"]

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.pyright]
pythonVersion = "3.12"
