[project]
name = "package"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
  "polars>=1.6",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "pyarrow>=21.0.0",
  "lightgbm>=4.6.0",
  "matplotlib>=3.10.7",
  "seaborn>=0.13.2",
  "skops>=0.13.0",
  "typer>=0.20.0",
]

[project.scripts]
package = "package.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dora_rl"]
include = ["src/dora_rl/py.typed"]

[tool.hatch.build.targets.sdist]
include = ["src/dora_rl/py.typed"]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "basedpyright>=1.16",
  "ipykernel>=6.29",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
exclude = ["**/.venv", "**/.uv", "**/__pycache__", "build", "dist", "**/*.ipynb", "**/*.ipy"]
